Add the not-yet-functional wagging finger

--- a/index.html
+++ b/index.html
@@ -10,33 +10,43 @@
   <script src="js/openseadragon/openseadragon.min.js" type="text/javascript"></script>
 </head>
 <body>
-    <!--
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#"><h2>Images</h2></a></li>
-        <li><a href="#"><h2>About</h2></a></li>
-      </ul>
-    </nav>
-  </header>
-    !-->
   <main>
     <section id="osd-1" class="viewer">
     </section>
     <section class="dresser">
       <section class="drawer-handle-container" data-drawer="container" >
-        <img src="assets/circle-rh.svg" class="drawer-handle drawer-handle-img" data-drawer="handle" tabindex="0" />
+        <img src="assets/circle-rh.svg" class="drawer-handle" data-drawer="handle" tabindex="0" draggable="false" />
       </section>
       <nav class="drawer drawer-books drawer-closed" data-drawer="books" >
-        <a data-book-link="inferno">INFERNO</a>
-        <a data-book-link="purgatorio">PURGATORIO</a>
-        <a data-book-link="paradiso">PARADISO</a>
+        <a class="drawer-headliner">
+          <i data-headliner="back-btn"></i>
+        </a>
+        <div class="drawer-contents">
+          <a data-book-link="inferno">INFERNO</a>
+          <a data-book-link="purgatorio">PURGATORIO</a>
+          <a data-book-link="paradiso">PARADISO</a>
+        </div>
       </nav>
-      <nav class="drawer drawer-inferno drawer-closed" data-drawer="inferno" >
+      <nav class="drawer drawer-inferno drawer-closed" data-drawer="inferno">
+        <a class="drawer-headliner">
+          <i data-headliner="back-btn"></i><h2>Inferno</h2>
+        </a>
+        <div class="drawer-contents">
+        </div>
       </nav>
-      <nav class="drawer drawer-purgatorio drawer-closed" data-drawer="purgatorio" >
+      <nav class="drawer drawer-purgatorio drawer-closed" data-drawer="purgatorio">
+        <div class="drawer-headliner">
+          <a data-headliner="back-btn"></a><h2>Purgatorio</h2>
+        </div>
+        <div class="drawer-contents">
+        </div>
       </nav>
-      <nav class="drawer drawer-paradiso drawer-closed" data-drawer="paradiso" >
+      <nav class="drawer drawer-paradiso drawer-closed" data-drawer="paradiso">
+          <div class="drawer-headliner">
+          <a data-headliner="back-btn"></a><h2>Paradiso</h2>
+        </div>
+        <div class="drawer-contents">
+        </div>
       </nav>
     </section>
   </main>
