The back btn is now hooked up

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <section class="drawer-handle-container" data-drawer="container" >
         <img src="assets/circle-rh.svg" class="drawer-handle" data-drawer="handle" tabindex="0" draggable="false" />
       </section>
-      <nav class="drawer drawer-books drawer-closed" data-drawer="books" >
-        <a class="drawer-headliner">
-          <i data-headliner="back-btn"></i>
+      <nav class="drawer drawer-books drawer-closed" data-drawer="books">
+        <a class="drawer-headliner" data-headliner="books">
+          <i class="back-btn"></i>
         </a>
         <div class="drawer-contents">
           <a data-book-link="inferno">INFERNO</a>
@@ -28,23 +28,23 @@
         </div>
       </nav>
       <nav class="drawer drawer-inferno drawer-closed" data-drawer="inferno">
-        <a class="drawer-headliner">
-          <i data-headliner="back-btn"></i><h2>Inferno</h2>
+        <a class="drawer-headliner" data-headliner="cantos">
+          <i class="back-btn"></i><h2>Inferno</h2>
         </a>
         <div class="drawer-contents">
         </div>
       </nav>
       <nav class="drawer drawer-purgatorio drawer-closed" data-drawer="purgatorio">
-        <div class="drawer-headliner">
-          <a data-headliner="back-btn"></a><h2>Purgatorio</h2>
-        </div>
+        <a class="drawer-headliner" data-headliner="cantos">
+          <i class="back-btn"></i><h2>Purgatorio</h2>
+        </a>
         <div class="drawer-contents">
         </div>
       </nav>
       <nav class="drawer drawer-paradiso drawer-closed" data-drawer="paradiso">
-          <div class="drawer-headliner">
-          <a data-headliner="back-btn"></a><h2>Paradiso</h2>
-        </div>
+        <a class="drawer-headliner" data-headliner="cantos">
+          <i class="back-btn"></i><h2>Paradiso</h2>
+        </a>
         <div class="drawer-contents">
         </div>
       </nav>
