--- a/index.html
+++ b/index.html
@@ -13,42 +13,44 @@
   <main>
     <section id="osd-1" class="viewer">
     </section>
-    <section class="dresser">
-      <section class="drawer-handle-container" data-drawer="container" >
-        <img src="assets/circle-rh.svg" class="drawer-handle" data-drawer="handle" tabindex="0" draggable="false" />
+    <div class="closet">
+      <section class="dresser">
+        <section class="drawer-handle-container" data-drawer="container" >
+          <img src="assets/circle-rh.svg" class="drawer-handle" data-drawer="handle" tabindex="0" draggable="false" />
+        </section>
+        <nav class="drawer drawer-books drawer-closed" data-drawer="books">
+          <a class="drawer-headliner" data-headliner="books">
+            <i class="back-btn"></i>
+          </a>
+          <div class="drawer-contents">
+            <a data-book-link="inferno">INFERNO</a>
+            <a data-book-link="purgatorio">PURGATORIO</a>
+            <a data-book-link="paradiso">PARADISO</a>
+          </div>
+        </nav>
+        <nav class="drawer drawer-inferno drawer-closed" data-drawer="inferno">
+          <a class="drawer-headliner" data-headliner="cantos">
+            <i class="back-btn"></i><h2>Inferno</h2>
+          </a>
+          <div class="drawer-contents">
+          </div>
+        </nav>
+        <nav class="drawer drawer-purgatorio drawer-closed" data-drawer="purgatorio">
+          <a class="drawer-headliner" data-headliner="cantos">
+            <i class="back-btn"></i><h2>Purgatorio</h2>
+          </a>
+          <div class="drawer-contents">
+          </div>
+        </nav>
+        <nav class="drawer drawer-paradiso drawer-closed" data-drawer="paradiso">
+          <a class="drawer-headliner" data-headliner="cantos">
+            <i class="back-btn"></i><h2>Paradiso</h2>
+          </a>
+          <div class="drawer-contents">
+          </div>
+        </nav>
       </section>
-      <nav class="drawer drawer-books drawer-closed" data-drawer="books">
-        <a class="drawer-headliner" data-headliner="books">
-          <i class="back-btn"></i>
-        </a>
-        <div class="drawer-contents">
-          <a data-book-link="inferno">INFERNO</a>
-          <a data-book-link="purgatorio">PURGATORIO</a>
-          <a data-book-link="paradiso">PARADISO</a>
-        </div>
-      </nav>
-      <nav class="drawer drawer-inferno drawer-closed" data-drawer="inferno">
-        <a class="drawer-headliner" data-headliner="cantos">
-          <i class="back-btn"></i><h2>Inferno</h2>
-        </a>
-        <div class="drawer-contents">
-        </div>
-      </nav>
-      <nav class="drawer drawer-purgatorio drawer-closed" data-drawer="purgatorio">
-        <a class="drawer-headliner" data-headliner="cantos">
-          <i class="back-btn"></i><h2>Purgatorio</h2>
-        </a>
-        <div class="drawer-contents">
-        </div>
-      </nav>
-      <nav class="drawer drawer-paradiso drawer-closed" data-drawer="paradiso">
-        <a class="drawer-headliner" data-headliner="cantos">
-          <i class="back-btn"></i><h2>Paradiso</h2>
-        </a>
-        <div class="drawer-contents">
-        </div>
-      </nav>
-    </section>
+    </div>
   </main>
 
   <script src="js/script.js" type="text/javascript"></script>
