--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     </div>
   </main>
 
-  <script src="js/script.js" type="text/javascript"></script>
+  <script src="build/index.js" type="text/javascript"></script>
 </body>
 </html>
