Initial toolbox html and css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="fonts.css" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="toolbox.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.7.14/dist/annotorious.min.css">
 </head>
 <body>
@@ -51,6 +52,19 @@
         </nav>
       </section>
     </div>
+    <section class="toolbox">
+      <nav class="toolbox-handle toolbox-handle-open">
+        <div class="toolbox-handle-button">
+          ⬅
+        </div>
+        <div class="toolbox-handle-button">
+          ➡
+        </div>
+        <div class="toolbox-handle-button">
+          ⚙️
+        </div>
+      </nav>
+    </section>
   </main>
 
   <script src="build/index.js" type="text/javascript"></script>
