Add autohide to toolbox

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
     </div>
     <section class="toolbox">
-      <div class="toolbox-handle toolbox-handle-open">
+      <div class="toolbox-handle toolbox-handle-closed">
         <div class="toolbox-handle-button" data-toolbox="prev-btn">
           ⬅
         </div>
