Flesh out toolbox items, add icons

--- a/index.html
+++ b/index.html
@@ -55,20 +55,17 @@
     <section class="toolbox">
       <div class="toolbox-handle toolbox-handle-closed">
         <div class="toolbox-handle-button" data-toolbox="prev-btn">
-          ⬅
         </div>
         <div class="toolbox-handle-button" data-toolbox="next-btn">
-          ➡
         </div>
         <menu class="toolbox-tools toolbox-tools-closed">
-          <li class="toolbox-tools-btn toolbox-tools-open-btn">⚙️</li>
+          <li class="toolbox-tools-btn toolbox-handle-button toolbox-tools-open-btn"></li>
           <li class="toolbox-tools-btn toolbox-tools-save-annotations">🐏</li>
           <li class="toolbox-tools-btn toolbox-tools-save-image">💾</li>
         </menu>
       </div>
     </section>
   </main>
-
   <script src="build/index.js" type="text/javascript"></script>
 </body>
 </html>
