Annotations overlay is half-complete!

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         </div>
         <menu class="toolbox-tools toolbox-tools-closed">
           <li class="toolbox-tools-btn toolbox-handle-button toolbox-tools-open-btn"></li>
-          <li class="toolbox-tools-btn toolbox-tools-save-annotations">🐏</li>
-          <li class="toolbox-tools-btn toolbox-tools-save-image">💾</li>
+          <li class="toolbox-tools-btn toolbox-tools-save-annotations">💾</li>
+          <li class="toolbox-tools-btn toolbox-tools-toggle-edit">🖍️</li>
+          <li class="toolbox-tools-btn toolbox-tools-toggle-annotations">📖</li>
         </menu>
       </div>
     </section>
